fixed overflow-x

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body{
     height: 100%;
     background: url("files/images/sitebg.jpg") no-repeat center fixed;
     background-size: cover;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 section{
